<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/card_back_btn"
        android:contentDescription="@string/menunavbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_home" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="259dp"
        android:layout_height="268dp"
        android:layout_marginStart="265dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_home" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/foodie"
        android:textColor="@color/purple_500"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="220dp"
        android:fontFamily="@font/poppins"
        android:text="@string/which_food_would_you_like_to_cook"
        android:textColor="#424242"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="130dp"
        android:background="@drawable/searchview"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="@font/poppins"
        android:hint="@string/search_recipe"
        android:inputType="none"
        android:paddingStart="48dp"
        android:textColorHint="#8B8B8B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/search_ic" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/categories"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/editTextText2"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/salad"
                style="@style/my_style"
                android:background="@drawable/category_card_bc"
                app:srcCompat="@drawable/category_salad" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/salad"
                android:layout_alignStart="@id/salad"
                android:layout_alignEnd="@id/salad"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="-23dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/salad"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/juice"
                style="@style/my_style"
                android:layout_marginStart="17dp"
                android:layout_toEndOf="@id/salad"
                android:background="@drawable/category_card_bc"
                app:srcCompat="@drawable/drinks" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/juice"
                android:layout_alignStart="@id/juice"
                android:layout_alignEnd="@id/juice"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="-23dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/juice"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/drinks"
                style="@style/my_style"
                android:layout_marginStart="17dp"
                android:layout_toEndOf="@id/juice"
                android:background="@drawable/category_card_bc"
                app:srcCompat="@drawable/catergory_drinks" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/drinks"
                android:layout_alignStart="@id/drinks"
                android:layout_alignEnd="@id/drinks"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="-23dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/drinks"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/dessert"
                style="@style/my_style"
                android:layout_marginStart="17dp"
                android:layout_toEndOf="@id/drinks"
                android:background="@drawable/category_card_bc"
                app:srcCompat="@drawable/category_dessert" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dessert"
                android:layout_alignStart="@id/dessert"
                android:layout_alignEnd="@id/dessert"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="-23dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/dessert"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </RelativeLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView10"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/popular_recipes"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_popular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

</androidx.constraintlayout.widget.ConstraintLayout>